--- a/estilo.css
+++ b/estilo.css
@@ -336,3 +336,20 @@ footer {
     padding: 10px;
   }
 }
+
+.audio-boton {
+  padding: 10px 15px;
+  background-color: #006A44;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9em;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.audio-boton:hover {
+  background-color: #004a2d;
+}
+
